// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtnView Snapshot component should fully render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BtnView
    id={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "View",
      "className": "btn btn-success btn-view",
      "onlyActiveOnIndex": false,
      "params": Object {
        "id": 1,
      },
      "style": Object {},
      "to": "view/1",
    },
    "ref": null,
    "rendered": "View",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "View",
        "className": "btn btn-success btn-view",
        "onlyActiveOnIndex": false,
        "params": Object {
          "id": 1,
        },
        "style": Object {},
        "to": "view/1",
      },
      "ref": null,
      "rendered": "View",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`RecipeHomeSnapshot component should fully render(image not set) 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecipeHome
    downvotes={1}
    favorited={1}
    id={1}
    image=""
    title=""
    upvotes={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg"
        />,
        <div
          id="votes-del"
        >
          <div
            id="recipe-votes"
          >
            <li>
              <i
                className="fa fa-heart"
              />
               
              1
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-up"
              >
                 
                1
              </i>
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-down"
              >
                 
                1
              </i>
            </li>
          </div>
        </div>,
        <div
          id="recipe-title"
        >
          <h2>
            
          </h2>
        </div>,
        <BtnView
          id={1}
        />,
      ],
      "className": "col-md-4 recipe-display",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            id="recipe-votes"
          >
            <li>
              <i
                className="fa fa-heart"
              />
               
              1
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-up"
              >
                 
                1
              </i>
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-down"
              >
                 
                1
              </i>
            </li>
          </div>,
          "id": "votes-del",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <i
                  className="fa fa-heart"
                />
                 
                1
              </li>,
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>
              </li>,
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>
              </li>,
            ],
            "id": "recipe-votes",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <i
                    className="fa fa-heart"
                  />,
                  " ",
                  1,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fa fa-heart",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                " ",
                1,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": Array [
                    " ",
                    1,
                  ],
                  "className": "fa fa-thumbs-o-up",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  1,
                ],
                "type": "i",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": Array [
                    " ",
                    1,
                  ],
                  "className": "fa fa-thumbs-o-down",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  1,
                ],
                "type": "i",
              },
              "type": "li",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2>
            
          </h2>,
          "id": "recipe-title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "id": 1,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg"
          />,
          <div
            id="votes-del"
          >
            <div
              id="recipe-votes"
            >
              <li>
                <i
                  className="fa fa-heart"
                />
                 
                1
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>
              </li>
            </div>
          </div>,
          <div
            id="recipe-title"
          >
            <h2>
              
            </h2>
          </div>,
          <BtnView
            id={1}
          />,
        ],
        "className": "col-md-4 recipe-display",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              id="recipe-votes"
            >
              <li>
                <i
                  className="fa fa-heart"
                />
                 
                1
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>
              </li>
            </div>,
            "id": "votes-del",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <i
                    className="fa fa-heart"
                  />
                   
                  1
                </li>,
                <li>
                  <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-up"
                  >
                     
                    1
                  </i>
                </li>,
                <li>
                  <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-down"
                  >
                     
                    1
                  </i>
                </li>,
              ],
              "id": "recipe-votes",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="fa fa-heart"
                    />,
                    " ",
                    1,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fa fa-heart",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  " ",
                  1,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-up"
                  >
                     
                    1
                  </i>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-hidden": "true",
                    "children": Array [
                      " ",
                      1,
                    ],
                    "className": "fa fa-thumbs-o-up",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    1,
                  ],
                  "type": "i",
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-down"
                  >
                     
                    1
                  </i>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-hidden": "true",
                    "children": Array [
                      " ",
                      1,
                    ],
                    "className": "fa fa-thumbs-o-down",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    1,
                  ],
                  "type": "i",
                },
                "type": "li",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2>
              
            </h2>,
            "id": "recipe-title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "id": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`RecipeHomeSnapshot component should fully render(image set) 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecipeHome
    downvotes={1}
    favorited={1}
    id={1}
    image="http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg"
    title=""
    upvotes={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg"
        />,
        <div
          id="votes-del"
        >
          <div
            id="recipe-votes"
          >
            <li>
              <i
                className="fa fa-heart"
              />
               
              1
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-up"
              >
                 
                1
              </i>
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-down"
              >
                 
                1
              </i>
            </li>
          </div>
        </div>,
        <div
          id="recipe-title"
        >
          <h2>
            
          </h2>
        </div>,
        <BtnView
          id={1}
        />,
      ],
      "className": "col-md-4 recipe-display",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            id="recipe-votes"
          >
            <li>
              <i
                className="fa fa-heart"
              />
               
              1
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-up"
              >
                 
                1
              </i>
            </li>
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-o-down"
              >
                 
                1
              </i>
            </li>
          </div>,
          "id": "votes-del",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <i
                  className="fa fa-heart"
                />
                 
                1
              </li>,
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>
              </li>,
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>
              </li>,
            ],
            "id": "recipe-votes",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <i
                    className="fa fa-heart"
                  />,
                  " ",
                  1,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fa fa-heart",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                " ",
                1,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": Array [
                    " ",
                    1,
                  ],
                  "className": "fa fa-thumbs-o-up",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  1,
                ],
                "type": "i",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": Array [
                    " ",
                    1,
                  ],
                  "className": "fa fa-thumbs-o-down",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  1,
                ],
                "type": "i",
              },
              "type": "li",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2>
            
          </h2>,
          "id": "recipe-title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "id": 1,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg"
          />,
          <div
            id="votes-del"
          >
            <div
              id="recipe-votes"
            >
              <li>
                <i
                  className="fa fa-heart"
                />
                 
                1
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>
              </li>
            </div>
          </div>,
          <div
            id="recipe-title"
          >
            <h2>
              
            </h2>
          </div>,
          <BtnView
            id={1}
          />,
        ],
        "className": "col-md-4 recipe-display",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "http://wyregate.com/wp-content/uploads/2018/03/recipe.jpg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              id="recipe-votes"
            >
              <li>
                <i
                  className="fa fa-heart"
                />
                 
                1
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-up"
                >
                   
                  1
                </i>
              </li>
              <li>
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-o-down"
                >
                   
                  1
                </i>
              </li>
            </div>,
            "id": "votes-del",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <i
                    className="fa fa-heart"
                  />
                   
                  1
                </li>,
                <li>
                  <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-up"
                  >
                     
                    1
                  </i>
                </li>,
                <li>
                  <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-down"
                  >
                     
                    1
                  </i>
                </li>,
              ],
              "id": "recipe-votes",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="fa fa-heart"
                    />,
                    " ",
                    1,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fa fa-heart",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  " ",
                  1,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-up"
                  >
                     
                    1
                  </i>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-hidden": "true",
                    "children": Array [
                      " ",
                      1,
                    ],
                    "className": "fa fa-thumbs-o-up",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    1,
                  ],
                  "type": "i",
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    aria-hidden="true"
                    className="fa fa-thumbs-o-down"
                  >
                     
                    1
                  </i>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-hidden": "true",
                    "children": Array [
                      " ",
                      1,
                    ],
                    "className": "fa fa-thumbs-o-down",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    1,
                  ],
                  "type": "i",
                },
                "type": "li",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2>
              
            </h2>,
            "id": "recipe-title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "id": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
